# Algorytmy-sortowania

./: App.h  CMakeLists.txt  Menu.cpp  Menu.h  Model.h  main.cpp  test.txt
Sort/: HeapSort.h  InsertionSort.h  QuickSort.h  ShellSort.h
